# computationalgeometry_3

./: .gitignore  README.md  epsilon.txt
cpp/: Makefile  intersect.cc
data/: strecken.tgz
haskell/: Main.hs  intersect  intersect.cabal
haskell-test-with-nubBy/: auswertung.R  auswertung.nb  haskell-times-10-20-_-200_real.csv  haskell-times-350-400-_-500.txt  haskell-times-350-400-_-500_real.csv  haskell-times-sec.csv  haskell-times.csv
haskell/CG/: Basic.hs  CG3.hs  Intersect.hs  Polygon.hs
haskell/test/: Spec.hs
haskell_cg1/: Main.hs
test/: run-intersect.sh  run-test.sh  swap-points.sh  translate-points.sh  visualize-test.R
test-c-vs-h/: Makefile  auswertung.R  make-dat-files-for-R.sh  run-intersect-c.txt  run-intersect-diff.html  run-intersect-h.txt
test-epsilon/: howto.txt  test-reasons-hist.txt  test-result.txt
test-haskell/: Makefile  auswertung.R  test-1000-2000-_-50000.txt
test-haskell-with-nubBy/: Haskell_Programmlaufzeit.eml  auswertung.R  haskell-times-10-20-_-200.txt  haskell-times-220-240-_-300.txt  haskell-times-220-240-_-300_real.csv  script.awk
