name:                intersect
version:             0.1.0.0
synopsis:            intersect - calculate number of intersecting lines
-- description:         
author:              Jakob Schöttl
maintainer:          jschoett@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base, containers
  default-language:    Haskell2010
  exposed-modules:     CG.CG3, CG.Intersect, CG.Basic, CG.Polygon

executable intersect
  main-is:             Main.hs 
  build-depends:       base, intersect, containers
  default-language:    Haskell2010

test-suite hspec
  build-depends:      base, hspec, QuickCheck, intersect
  default-language:   Haskell2010
  hs-source-dirs:     test .
  main-is:            Spec.hs
  type:               exitcode-stdio-1.0
  other-modules:      CG.CG3
